@@ -3,7 +3,17 @@ Change log next version
 * Added support for specifying base path using "RestAssured.basePath = /resource". E.g. let's say that the base URI is http://localhost and base path is "/resource" will make create a request to "http://localhost/resource/something" when doing a 'get("/something")'. Default value is empty. (issue 13)
 * Support for specifying request/query parameters in the url, e.g. get("/something?param1=first&param2=second"). (issue 23)
 * Fixed a bug in RestAssuredResponse parser that caused a NPE when the input stream was null. (issue 25)
-* Major improvements to XML expecations. It now uses Groovy evaluation of the expectation string to allow for much better expectations.
+* Major improvements to XML expecations. It now uses Groovy syntax for the expectation string to allow for much better expectations! Note that this fix will break backward compatibility on some expectations. E.g. given
+        <greeting>
+                <firstName>John</firstName>
+                <lastName>Doe</lastName>
+        </greeting>
+  you used to do:
+        expect().body("greeting", hasItems("John", "Doe"))..
+  Now this will not work, instead you have to do:
+        expect().body("greeting.children()", hasItems("John", "Doe"))..
+  But this also means that you can do:
+        expect().body("greeting.size()", equalsTo(2))..
 * Support for expecting on XML attributes, e.g. expect().body("greeting.name.@firstName", equalTo("John")).when().get("/greetXMLAttribute?firstName=John&lastName=Doe");
 
 Change 1.0.3 (2011-01-17)
